# electivesRecommender

./: .gitignore  CODEX_PROMPT.md  DATA_SPEC.md  IMPLEMENTATION_PLAN.md  PROJECT_BRIEF.md  PROTOTYPE_RECOMMENDER_DISCUSSION.md  README.md  README_RecSys_Group10.md  UI_SPEC.md  app.py  index.html  prototype_static.html  pyproject.toml  recommender.py  requirements.txt  run_prototype.sh  start_demo.cmd  start_demo.sh
data/: courses.csv
design_details/: TISS_UI_UX_GUIDE.md
tests/: test_recommender.py
